# PomodoroTimer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  resources.qrc
src/qml/: main.qml
